[package]
name = "healthcare-analytics"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
cplex-rs = { path = "./lib/cplex-rs" }
serde_json = "1.0.140"
which = "7.0.3"
