[package]
name = "cplex-rs-sys"
description = "FFI bindings to cplex"
links = "static=cplex"
authors = ["Matteo Biggio"]
version = "0.1.7"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["optimization", "binding", "cplex"]
repository = "https://github.com/mbiggio/cplex-rs"

[dependencies]

[build-dependencies]
bindgen = "0.69"
glob = "0.3"
once_cell = "1.19"

[dev-dependencies]
libc = "0.2"
